z-index fix

--- a/explore/planets.css
+++ b/explore/planets.css
@@ -34,6 +34,10 @@
 .neptune{
     fill: var(--neptune-blue);
 }
+
+.semimajorAxis{
+    z-index: -1;
+}
 /* #endregion */
 
 /* #region Planet Stat Card */
@@ -41,9 +45,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 10;
 }
 
 .planet-stats-card{
+    z-index: inherit;
     position: fixed;
     top: 35%;
     right: 10%;
@@ -170,4 +176,8 @@
     justify-self: center;
     align-items: center;
     padding: 0.5rem;
+}
+
+aside{
+    z-index: 100;
 }
